--- a/frontend/kendol/src/static/EditBook.css
+++ b/frontend/kendol/src/static/EditBook.css
@@ -1,5 +1,6 @@
 .shadow-on-hover:hover {
 	box-shadow: 0px 0px 10px;
+	color: black;
 }
 .update-book-control {
 	left: 80%;
@@ -11,6 +12,13 @@
 .delete-book-control {
 	left: 80%;
 	top: 16%;
+	position: absolute;
+	margin-top: -10px;
+	margin-left: -10px;
+}
+.approve-book-control {
+	left: 80%;
+	top: 22%;
 	position: absolute;
 	margin-top: -10px;
 	margin-left: -10px;
